Attempt to fix labels on mobile for category breakdown chart

--- a/src/components/charts/CategoryBreakdownChart.module.css
+++ b/src/components/charts/CategoryBreakdownChart.module.css
@@ -36,6 +36,13 @@
     max-height: 350px;
   }
 }
+
+  @media (max-width: 500px) {
+  .chartContainerWrapper {
+    padding-right: 4px;
+    padding-left: 4px;
+  }
+}
 /* --- END UPDATED STYLES --- */
 
 
